Fix responsive alignment

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
 @tailwind components;
 @tailwind utilities;
 
+/** Modal **/
+
 .modal {
   z-index: 100;
   transition: opacity 0.25s ease;
@@ -17,13 +19,71 @@ body.modal-active {
 
   height: 100vh;
   overflow-y: hidden;
-  /* overflow-y: visible !important; */
 }
 
-section,
-footer#contact {
-  height: 100vh;
-  width: 100%;
+/** Accordian **/
+
+/* Tab content - closed */
+.tab-content {
+  max-height: 0;
+  -webkit-transition: max-height 0.35s;
+  -o-transition: max-height 0.35s;
+  transition: max-height 0.35s;
+}
+/* :checked - resize to full height */
+.tab input:checked ~ .tab-content {
+  max-height: 100vh;
+}
+/* Label formatting when open */
+.tab input:checked + label {
+  /*@apply text-xl p-5 border-l-2 border-indigo-500 bg-gray-100 font-semibold text-indigo*/
+  font-size: 1.25rem; /*.text-xl*/
+  padding: 1.25rem; /*.p-5*/
+  border-left-width: 2px; /*.border-l-2*/
+  border-color: #feb00a; /*.border-indigo*/
+  background-color: #f8fafc; /*.bg-gray-100 */
+  color: #353535; /*.text-indigo*/
+}
+/* Icon */
+.tab label::after {
+  float: right;
+  right: 0;
+  top: 0;
+  display: block;
+  width: 1.5em;
+  height: 1.5em;
+  line-height: 1.5;
+  font-size: 1.25rem;
+  text-align: center;
+  -webkit-transition: all 0.35s;
+  -o-transition: all 0.35s;
+  transition: all 0.35s;
+}
+/* Icon formatting - closed */
+.tab input[type='checkbox'] + label::after {
+  content: '+';
+  font-weight: bold; /*.font-bold*/
+  border-width: 1px; /*.border*/
+  border-radius: 9999px; /*.rounded-full */
+  border-color: #b8c2cc; /*.border-grey*/
+}
+.tab input[type='radio'] + label::after {
+  content: '\25BE';
+  font-weight: bold; /*.font-bold*/
+  border-width: 1px; /*.border*/
+  border-radius: 9999px; /*.rounded-full */
+  border-color: #b8c2cc; /*.border-grey*/
+}
+/* Icon formatting - open */
+.tab input[type='checkbox']:checked + label::after {
+  transform: rotate(315deg);
+  background-color: #feb00a; /*.bg-indigo*/
+  color: #f8fafc; /*.text-grey-lightest*/
+}
+.tab input[type='radio']:checked + label::after {
+  transform: rotateX(180deg);
+  background-color: #feb00a; /*.bg-indigo*/
+  color: #f8fafc; /*.text-grey-lightest*/
 }
 
 .stylistic-quote-mark {
@@ -33,33 +93,7 @@ footer#contact {
   @apply absolute hidden mr-2 font-sans leading-none text-red-900;
 }
 
-@screen sm {
-  .stylistic-quote-mark {
-    @apply block;
-  }
-
-  .main-header,
-  nav {
-    grid-template-columns: 1rem repeat(6, minmax(0, 1fr)) 1rem;
-  }
-
-  section,
-  footer#contact {
-    min-height: 100vh;
-    width: 100%;
-  }
-}
-
-@screen md {
-  .main-header,
-  nav {
-    grid-template-columns: 6rem repeat(6, minmax(0, 1fr)) 6rem;
-  }
-
-  .portfolio {
-    grid-template-rows: repeat(6, minmax(0, 100px));
-  }
-}
+/** Porfolio Section **/
 
 .project-tag {
   @apply p-2 text-sm font-light bg-[#353535];
@@ -88,9 +122,53 @@ footer#contact {
   @apply md:row-span-3 md:col-span-2 col-span-5;
 }
 
+/** Footer/Contact Section **/
+
+section,
+footer#contact {
+  min-height: 100vh;
+  width: 100%;
+}
+
+/** Media Queries **/
+
 @screen sm {
   .stylistic-quote-mark {
     @apply block;
+  }
+
+  .portfolio-item {
+    @apply h-24 bg-center;
+  }
+
+  .stylistic-quote-mark {
+    @apply block;
+  }
+
+  .main-header,
+  nav {
+    grid-template-columns: 1rem repeat(6, minmax(0, 1fr)) 1rem;
+  }
+
+  section,
+  footer#contact {
+    min-height: 100vh;
+    width: 100%;
+  }
+}
+
+@screen md {
+  .portfolio-item {
+    @apply h-auto;
+  }
+
+  .main-header,
+  nav {
+    grid-template-columns: 6rem repeat(6, minmax(0, 1fr)) 6rem;
+  }
+
+  .portfolio {
+    grid-template-rows: repeat(6, minmax(0, 100px));
   }
 }
 
